# biblioteca_backend

./: README.md  pyproject.toml  requirements.txt  requiriments.txt
biblioteca/migrations/: 0001_initial.py  0002_autores.py  0003_categoria.py  0004_livros.py
biblioteca/models/: __init__.py  livroPego.py  livros.py
biblioteca/serializers/: LivroPego.py  __init__.py  livros.py
biblioteca/views/: __init__.py  livroPego.py  livros.py
core/biblioteca/: admin.py  apps.py  signals.py
core/biblioteca/migrations/: 0001_initial.py  0002_categoria.py  0003_categoria.py  0003_livro.py  0004_livropego.py  0005_livro_nota_avaliacao.py  0006_favorito.py  0007_alter_livro_categoria.py  0008_livropego_data_devolucao.py  0009_blockedlivros.py  0010_blockedlivros_categoria_blockedlivros_generos.py  0011_familia.py  0012_familia_nome.py  0013_alter_categoria_id_alter_familia_usuario_and_more.py  0014_alter_categoria_id.py  0015_livropego_active.py
core/biblioteca/models/: __init__.py  autores.py  avaliacao.py  blockedBooks.py  categoria.py  familia.py  favorito.py  genero.py  livro.py  livroPego.py  taxas.py
core/biblioteca/serializers/: __init__.py  autores.py  avaliacao.py  blockedBooks.py  categorias.py  familia.py  favorito.py  genero.py  livro.py  livroPego.py  taxas.py
core/biblioteca/views/: __init__.py  autores.py  avaliacao.py  blockedBooks.py  categoria.py  familia.py  favorito.py  genero.py  livro.py  livroPego.py  relatorio.py  taxas.py
core/uploader/migrations/: 0001_initial.py
core/uploader/models/: document.py  image.py
core/usuario/: admin.py  authentication.py  forms.py  managers.py  models.py  router.py  serializers.py  views.py
core/usuario/migrations/: 0001_initial.py  0002_alter_usuario_passage_id.py  0003_alter_usuario_passage_id.py  0004_alter_usuario_passage_id.py  0005_alter_usuario_passage_id.py  0006_alter_usuario_passage_id.py  0007_usuario_user_meta_usuario_username.py  0008_remove_usuario_user_meta_remove_usuario_username.py  0009_remove_usuario_passage_id_usuario_age_and_more.py  0010_remove_usuario_age_remove_usuario_username.py  0011_usuario_has_book.py  0012_usuario_age.py  0013_usuario_account_type.py  0014_alter_usuario_account_type.py  0015_remove_usuario_account_type.py  0016_alter_usuario_age.py
django_project/: settings.py  urls.py
