[project]
name = "biblioteca_backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jaotarzan", email = "joaovssouza59@gmail.com"},
    {name = "tecinfoifc", email = "luansilva250807@gmail.com"},
    {name = "luansilva25", email = "luansilva250807@gmail.com"},
    {name = "Gabz047", email = "gabe1612mail@gmail.com"},
]
dependencies = [
    "django>=5.0.7",
    "djangorestframework>=3.15.2",
    "setuptools>=70.3.0",
    "drf-spectacular>=0.27.2",
    "django-cors-headers>=4.4.0",
    "passage-identity>=2.1.4",
    "cffi>=1.16.0",
    "rpds-py>=0.19.1",
    "python-magic>=0.4.27",
    "pillow>=10.4.0",
    "psycopg2>=2.9.9",
    "psycopg2-binary>=2.9.9",
    "waitress>=3.0.0",
    "weasyprint>=62.3",
    "django-cloudinary-storage>=0.3.0",
    "white>=0.1.2",
    "noise>=1.2.2",
    "whitenoise>=6.7.0",
    "djangorestframework-simplejwt>=5.3.1",
    "asgiref==3.8.1",
    "attrs==23.2.0",
    "blinker==1.8.2",
    "brotli==1.1.0",
    "certifi==2024.7.4",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cloudinary==1.41.0",
    "cryptography==42.0.8",
    "cssselect2==0.7.0",
    "django==5.0.7",
    "django-cloudinary-storage==0.3.0",
    "django-cors-headers==4.4.0",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "drf-spectacular==0.27.2",
    "flask==3.0.3",
    "fonttools==4.53.1",
    "fonttools[woff]==4.53.1",
    "html5lib==1.1",
    "idna==3.7",
    "inflection==0.5.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "markupsafe==2.1.5",
    "noise==1.2.2",
    "passage-identity==2.1.4",
    "pillow==10.4.0",
    "psycopg2==2.9.9",
    "psycopg2-binary==2.9.9",
    "pycparser==2.22",
    "pydyf==0.11.0",
    "pyjwt==2.8.0",
    "pyphen==0.16.0",
    "python-magic==0.4.27",
    "pyyaml==6.0.1",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rpds-py==0.19.1",
    "setuptools==71.0.3",
    "six==1.16.0",
    "sqlparse==0.5.1",
    "tinycss2==1.3.0",
    "uritemplate==4.1.1",
    "urllib3==2.2.2",
    "waitress==3.0.0",
    "weasyprint==62.3",
    "webencodings==0.5.1",
    "werkzeug==3.0.3",
    "white==0.1.2",
    "whitenoise==6.7.0",
    "zopfli==0.2.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "python manage.py runserver"
runserver = "python manage.py runserver"
createsuperuser = "python manage.py createsuperuser"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
shell = "python manage.py shell"
test = "python manage.py test"
startapp = "python manage.py startapp {args}"
loaddata = "python manage.py loaddata {args}"
dumpdata = "python manage.py dumpdata {args}"